[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="." index="0"]

position = Vector2( 506.089, 228.585 )
texture = ExtResource( 2 )

[node name="Mover" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 488.0
margin_right = 66.0
margin_bottom = 508.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Mover"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Escalar" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 386.0
margin_top = 488.0
margin_right = 442.0
margin_bottom = 508.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Escalar"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Rotar" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 725.0
margin_top = 485.0
margin_right = 781.0
margin_bottom = 505.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Rotar"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="Mover" to="." method="_on_Mover_pressed"]

[connection signal="pressed" from="Escalar" to="." method="_on_Escalar_pressed"]

[connection signal="pressed" from="Rotar" to="." method="_on_Rotar_pressed"]


